# eyebrowse

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  constants.h  eyeTracker.cpp  eyeTracker.h  findEyeCenter.cpp  findEyeCenter.h  findEyeCorner.cpp  findEyeCorner.h  helpers.cpp  helpers.h  interfaceSample.cpp  main.cpp  uiActions.cpp  uiActions.h
src/eyeBrowse-config/EyeBrowse-Config/: EyeBrowse-Config.pro  configurator.cpp  configurator.h  configurator.ui  main.cpp
